<resources>
    <string name="app_name">moby</string>

    <!-- welcome activity-->
    <string name="welcome">Welcome!</string>
    <string name="welcome_sub">\n회원이신가요? \n모비의 새로운 가족이 되어주세요!</string>
    <string name="title_activity_login">로그인</string>
    <string name="join">회원가입</string>
    <string name="login">로그인</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- maps activity -->
    <string name="title_activity_maps">Map</string>

    <!-- fragment -->
    <string name="picking_time_message">픽업시간을 선택해주세요</string>
    <string name="picking_time">픽업시간</string>
    <string name="target_time">도착시간</string>

    <string name="item_reg_message">물품 정보를 입력해주세요</string>
    <string name="title_image_register">사진 등록</string>
    <string name="item_info">상세 설명</string>
    <string name="item_info_hint">물품에 대해 알려주세요!(100자 이내)</string>

    <string name="target_info_message">받는 분의 정보를 입력해주세요</string>
    <string name="recipient_name">성함</string>
    <string name="recipient_phone">전화번호</string>

    <string name="payment_message">결제정보를 확인해주세요</string>

    <!-- StringLib -->
    <string name="skip_string">...</string>

    <!-- Image Register -->
    <string name="no_image_ready">이미지를 준비중입니다. 잠시 후에 다시 시도해주세요</string>
    <string name="no_image_selected">이미지를 먼저 선택해주세요</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_icon">location_icon</string>

</resources>
