<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_height">

    <ImageView
        android:id="@+id/process_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:src="@drawable/process_2"
        android:layout_alignParentTop="true"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:background="?android:attr/listDivider"
        android:layout_below="@+id/process_img"/>

    <RelativeLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_below="@+id/divider">

        <TextView
            android:id="@+id/inform_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_reg_message"
            android:padding="15dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/spacing_large"/>

        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:padding="0dp"
            android:src="@drawable/btn_square_orange" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_content_height"
        android:orientation="horizontal"
        android:layout_below="@+id/info_layout"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        >

        <ImageView
            android:id="@+id/item_image_view"
            android:layout_width="@dimen/item_image_size"
            android:layout_height="@dimen/item_image_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:background="@drawable/btn_round"
            android:scaleType="center"
            android:src="@drawable/baseline_add_to_photos_white_48" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/depart_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:text="@string/item_info" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/image_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:gravity="top"
                    android:hint="@string/item_info_hint"
                    android:inputType="textMultiLine"
                    android:singleLine="false"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>