<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_height">

    <ImageView
        android:id="@+id/process_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:src="@drawable/process_3"
        android:layout_alignParentTop="true"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:background="?android:attr/listDivider"
        android:layout_below="@+id/process_img"/>

    <RelativeLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_below="@+id/divider">

        <TextView
            android:id="@+id/inform_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target_info_message"
            android:padding="15dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/spacing_large"/>

        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:padding="0dp"
            android:src="@drawable/btn_square_orange" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_content_height"
        android:orientation="horizontal"
        android:layout_below="@+id/info_layout"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/route_icon"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/depart_time_text"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/recipient_name"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/spacing_medium" />

                <EditText
                    android:id="@+id/depart_time_picker"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="@dimen/spinner_width"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:background="@color/white"
                    android:hint="강지혜"
                    android:inputType="textAutoComplete|textPersonName"
                    android:shadowColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/target_time_text"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/recipient_phone"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/spacing_medium"/>

                <EditText
                    android:id="@+id/target_time_picker"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="@dimen/spinner_width"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:background="@color/white"
                    android:hint="010-xxxxx-xxxx"
                    android:inputType="phone"
                    android:shadowColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>